Basic website works

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://github.com">
+        class="Link" href="https://github.com/nickmoy">
        		Github
     </a>
     <a
@@ -67,19 +67,19 @@
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://zeyuyun1.github.io">
+        class="Link" href="file:///Users/nicholasmoy/Desktop/website/resume.pdf">
         	CV
     </a>
 </div>
 
-<div class="myDiv">
-  <h2>This is a heading in a div element</h2>
-  <p>This is some text in a div element.</p>
+<div style="position: absolute; width: 47%;">
+    <p>
+    I am a recent graduate with a Masters in Math from UC Irvine in 2023 who is interested in software engineering and machine learning. Originally, I'm from Los Angeles, California, and I completed my Bachelors in Math from UC Berkeley in 2021. In school, I was very interested in geometry, particularly algebraic geometry and studied topics up to scheme theory. In the applied math fields, I took Computer Science classes like Data Structures and Machine Learning as an undergraduate as well as classes such as ODEs, PDEs, and Computational Differential Equations during graduate school. I have experience with C++, python, and Java.
+    </p>
 </div>
 
-<p>This is some text outside the div element.</p>
+<img src="file:///Users/nicholasmoy/Desktop/website/NickPic.png" align="right" width="400"> 
 
 </body>
 </html>
-
 
