--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://zeyuyun1.github.io">
+        class="Link" href="https://nickmoy.github.io">
         	Personal Projects
     </a>
     <a
@@ -67,7 +67,7 @@
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="file:///Users/nicholasmoy/Desktop/website/resume.pdf">
+        class="Link" href="NickPic.png">
         	CV
     </a>
 </div>
