--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     	<a
     		style="text-decoration: none;
             color: #FFFFFF;"
-            href="https:nickmoy/github.io">
+            href="https:nickmoy.github.io">
             	Nicholas Moy
         </a>
    	</h1>
     
 	<a
-    	class="Link" href="https:nickmoy/github.io">
+    	class="Link" href="https:nickmoy.github.io">
         	Bio
     </a>
     
