--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="NickPic.png">
+        class="Link" href="/NickPic.png">
         	CV
     </a>
 </div>
