--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="/NickPic.png">
+        class="Link" href="resume.pdf">
         	CV
     </a>
 </div>
@@ -78,7 +78,7 @@
     </p>
 </div>
 
-<img src="file:///Users/nicholasmoy/Desktop/website/NickPic.png" align="right" width="400"> 
+<img src="NickPic.png" align="right" width="400"> 
 
 </body>
 </html>
