Added everything except for Personal Projects page

--- a/index.html
+++ b/index.html
@@ -72,13 +72,17 @@
     </a>
 </div>
 
-<div style="position: absolute; width: 47%;">
+<div style="position: absolute; width: 50%;">
     <p>
     I am a recent graduate with a Masters in Math from UC Irvine in 2023 who is interested in software engineering and machine learning. Originally, I'm from Los Angeles, California, and I completed my Bachelors in Math from UC Berkeley in 2021. In school, I was very interested in geometry, particularly algebraic geometry and studied topics up to scheme theory. In the applied math fields, I took Computer Science classes like Data Structures and Machine Learning as an undergraduate as well as classes such as ODEs, PDEs, and Computational Differential Equations during graduate school. I have experience with C++, python, and Java.
     </p>
+
+    <p>
+    Feel free to contact me at <span style="color: #363791;">nsmoy@uci.edu</span>
+    </p>
 </div>
 
-<img src="NickPic.png" align="right" width="400"> 
+<img src="NickPic.png" align="right" width="500"> 
 
 </body>
 </html>
