--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://nickmoy.github.io">
+        class="Link" href="file:///Users/nicholasmoy/Desktop/website/personal_projects.html">
         	Personal Projects
     </a>
     <a
@@ -74,7 +74,7 @@
 
 <div style="position: absolute; width: 50%;">
     <p>
-    I am a recent graduate with a Masters in Math from UC Irvine in 2023 who is interested in software engineering and machine learning. Originally, I'm from Los Angeles, California, and I completed my Bachelors in Math from UC Berkeley in 2021. In school, I was very interested in geometry, particularly algebraic geometry and studied topics up to scheme theory. In the applied math fields, I took Computer Science classes like Data Structures and Machine Learning as an undergraduate as well as classes such as ODEs, PDEs, and Computational Differential Equations during graduate school. I have experience with C++, python, and Java.
+    I am a recent graduate with a Masters in Math from UC Irvine in 2023 who is interested in software engineering and machine learning. Originally, I'm from Los Angeles, California, and I completed my Bachelors in Math from UC Berkeley in 2021 with honors. In school, I was very interested in geometry, particularly algebraic geometry and studied topics up to scheme theory. In the applied math fields, I took Computer Science classes like Data Structures and Machine Learning as an undergraduate as well as classes such as ODEs, PDEs, and Computational Differential Equations during graduate school. I have experience with C++, python, and Java.
     </p>
 
     <p>
