--- a/personal_projects.html
+++ b/personal_projects.html
@@ -15,10 +15,12 @@
 }
 
 .Topbar {
-	position = fixed;
+    position: -webkit-sticky;
+	position: sticky;
     border: 4px outset #5071b3;
     background-color: #575898;
     height: 100px;
+    top: 0px;
 	padding: 10px;
     text-decoration: none;
 }
