--- a/personal_projects.html
+++ b/personal_projects.html
@@ -57,19 +57,19 @@
     	<a
     		style="text-decoration: none;
             color: #FFFFFF;"
-            href="https://nickmoy.github.io">
+            href="index.html">
             	Nicholas Moy
         </a>
    	</h1>
     
 	<a
-    	class="Link" href="https://nickmoy.github.io">
+    	class="Link" href="index.html">
         	Bio
     </a>
     
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://nickmoy.github.io">
+        class="Link" href="personal_projects.html">
         	Personal Projects
     </a>
     <a
