--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
     	<a
     		style="text-decoration: none;
             color: #FFFFFF;"
-            href="https://nickmoy.github.io">
+            href="index.html">
             	Nicholas Moy
         </a>
    	</h1>
     
 	<a
-    	class="Link" href="https://nickmoy.github.io">
+    	class="Link" href="index.html">
         	Bio
     </a>
     
     <a
     	style="padding-left: 10px;"
-        class="Link" href="file:///Users/nicholasmoy/Desktop/website/personal_projects.html">
+        class="Link" href="personal_projects.html">
         	Personal Projects
     </a>
     <a
