Added GameofLife to personal projects with png image.

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -119,5 +119,20 @@
     </div>
 </div>
 
+<div class="wrapper">
+    <div class="first">
+        <img src="GameofLife.png" width="300px">
+    </div>
+    <div class="second">
+        <p>This is an implementation of Conway's Game of Life written in Java with the Java Swing framework for the graphics and display. The default setup has Bill Gosper's Glider Gun and you can pause the game with Spacebar and click the mouse to add/remove your own cells.</p>
+        <a
+            style="padding-left: 10px;"
+            class="Link" href="https://www.github.com/nickmoy/GameofLife.png">
+            Github
+        </a> 
+    </div>
+</div>
+
+
 </body>
 </html>
