--- a/personal_projects.html
+++ b/personal_projects.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+
 .myDiv {
   border: 4px outset grey;
   background-color: lightblue;    
@@ -18,7 +19,7 @@
     position: -webkit-sticky;
 	position: sticky;
     border: 4px outset #5071b3;
-    background-color: #575898;
+    background-color: #4E474E;
     height: 100px;
     top: 0px;
 	padding: 10px;
@@ -26,11 +27,6 @@
 }
 
 .project {
-    padding-left: 100px;
-    width: 40%;
-}
-
-.wrapper {
     width: 700px;
     border: 1px solid black;
     overflow: hidden; /* will contain if #first is longer than #second */
@@ -46,11 +42,12 @@
 }
 
 .Link {
-	color: #B0B0F9;
+	color: #2C67AC;
 }
+
 </style>
 </head>
-<body>
+<body style="background-color:#E9E6E6">
 
 <div class="Topbar">
 	<h1>
@@ -91,7 +88,7 @@
 
 <p></p>
 
-<div class="wrapper">
+<div class="project">
     <div class="first">
         <img src="VerletIntegrationPic.png" width="300px">
     </div>
@@ -105,7 +102,7 @@
     </div>
 </div>
 
-<div class="wrapper">
+<div class="project">
     <div class="first">
         <img src="NNPoissonPic.png" width="300px">
     </div>
@@ -119,7 +116,7 @@
     </div>
 </div>
 
-<div class="wrapper">
+<div class="project">
     <div class="first">
         <img src="GameofLife.png" width="300px">
     </div>
@@ -127,12 +124,25 @@
         <p>This is an implementation of Conway's Game of Life written in Java with the Java Swing framework for the graphics and display. The default setup has Bill Gosper's Glider Gun and you can pause the game with Spacebar and click the mouse to add/remove your own cells.</p>
         <a
             style="padding-left: 10px;"
-            class="Link" href="https://www.github.com/nickmoy/GameofLife.png">
+            class="Link" href="https://github.com/nickmoy/Game-of-Life">
             Github
         </a> 
     </div>
 </div>
 
+<div class="project">
+    <div class="first">
+        <img src="tennis.gif" width="300px">
+    </div>
+    <div class="second">
+        <p>An image analysis neural network model which analyzes images/videos of tennis matches written in python. Uses the YOLO object detection model and pytorch Resnet50. Uses reference points on the court to predict the coordinates of the players and ball on the court and their velocities. Uses python libraries such as pytorch, opencv, pickle, pandas</p>
+        <a
+            style="padding-left: 10px;"
+            class="Link" href="https://github.com/nickmoy/tennis-image-analysis-ai">
+            Github
+        </a> 
+    </div>
+</div>
 
 </body>
 </html>
