Fixed formatting with project divs

--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
   border-color:grey;
   box-shadow:0 0 10px #9ecaed;
 }
-</style>
 
-<style>
 .Topbar {
-	position = fixed;
+	position = sticky;
     border: 4px outset #5071b3;
     background-color: #4E474E;
     height: 100px;
 	padding: 10px;
     text-decoration: none;
 }
-</style>
 
-<style>
 .Link {
 	color: #2C67AC;
+}
+.TopLink {
+	color: #FFFFFF;
 }
 </style>
 </head>
@@ -48,28 +47,28 @@
    	</h1>
     
 	<a
-    	class="Link" href="index.html">
+    	class="TopLink" href="index.html">
         	Bio
     </a>
     
     <a
     	style="padding-left: 10px;"
-        class="Link" href="personal_projects.html">
+        class="TopLink" href="personal_projects.html">
         	Personal Projects
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://github.com/nickmoy">
+        class="TopLink" href="https://github.com/nickmoy">
        		Github
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="https://www.linkedin.com/in/nicholas-moy-3ab451220/">
+        class="TopLink" href="https://www.linkedin.com/in/nicholas-moy-3ab451220/">
         	LinkedIn
     </a>
     <a
     	style="padding-left: 10px;"
-        class="Link" href="resume.pdf">
+        class="TopLink" href="resume.pdf">
         	CV
     </a>
 </div>
@@ -80,7 +79,7 @@
     </p>
 
     <p>
-    Feel free to contact me at <span style="color: #363791;">nsmoy@uci.edu</span>
+    Feel free to contact me at <span style="color: #363791;"><u>nsmoy@uci.edu</u></span>
     </p>
 </div>
 
