Created assets folder

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </a>
         <a
             style="padding-left: 10px;"
-            class="TopLink" href="resume.pdf">
+            class="TopLink" href="assets/resume.pdf">
             CV
         </a>
     </div>
@@ -93,7 +93,7 @@
             </p>
         </div>
 
-        <img src="NickPic.png" align="right" width="500"> 
+        <img src="assets/NickPic.png" align="right" width="500"> 
 
     </div>
 
