--- a/personal_projects.html
+++ b/personal_projects.html
@@ -64,6 +64,7 @@
 <body style="background-color:#E9E6E6;
              margin: 0">
 
+    <!-- Topbar -->
     <div class="Topbar">
         <h1>
             <a
@@ -106,11 +107,12 @@
         </a>
     </div>
 
+    <!-- Start of content -->
     <div class="Content">
 
         <div class="Project">
             <div class="first">
-                <img src="VerletIntegrationPic.png" width="300px">
+                <img src="assets/VerletIntegrationPic.png" width="300px">
             </div>
             <div class="second">
                 <p class="title">Verlet Integration</p>
@@ -131,7 +133,7 @@
 
         <div class="Project">
             <div class="first">
-                <img src="NNPoissonPic.png" width="300px">
+                <img src="assets/NNPoissonPic.png" width="300px">
             </div>
             <div class="second">
                 <p class="title">Poisson Equation Neural Network</p>
@@ -154,7 +156,7 @@
 
         <div class="Project">
             <div class="first">
-                <img src="Game-of-Life.gif" width="300px">
+                <img src="assets/Game-of-Life.gif" width="300px">
             </div>
             <div class="second">
                 <p class="title">Conway's Game of Life</p>
@@ -176,7 +178,7 @@
 
         <div class="Project">
             <div class="first">
-                <img src="tennis.gif" width="500px">
+                <img src="assets/tennis.gif" width="500px">
             </div>
             <div class="second">
                 <p class="title">Tennis Image Analysis AI</p>
