--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a
             style="padding-left: 10px;"
             class="TopLink" href="assets/resume.pdf">
-            CV
+            Resume/CV
         </a>
     </div>
 
