--- a/personal_projects.html
+++ b/personal_projects.html
@@ -103,7 +103,7 @@
             style="padding-left: 10px;"
             class="TopLink"
             href="assets/Resume.pdf">
-            CV
+            Resume/CV
         </a>
     </div>
 
