--- a/personal_projects.html
+++ b/personal_projects.html
@@ -102,7 +102,7 @@
         <a
             style="padding-left: 10px;"
             class="TopLink"
-            href="assets/Resume.pdf">
+            href="assets/resume.pdf">
             Resume/CV
         </a>
     </div>
@@ -178,7 +178,7 @@
 
         <div class="Project">
             <div class="first">
-                <img src="assets/Tennis.gif" width="500px">
+                <img src="assets/tennis.gif" width="500px">
             </div>
             <div class="second">
                 <p class="title">Tennis Image Analysis AI</p>
